2022-12-08T16:19:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3650093256 # 685
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 262 476 / 269 486
* notice: next accum: outdated-unq outdated-all / unq all: 262 476 / 269 486
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-24 2022-12-08]

2022-12-08T08:17:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3646498649 # 684
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 262 476 / 268 486
* notice: next accum: outdated-unq outdated-all / unq all: 262 476 / 269 486
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-24 2022-12-08]

2022-12-08T01:07:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3644270354 # 683
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 262 476 / 267 485
* notice: next accum: outdated-unq outdated-all / unq all: 262 476 / 268 486
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-12-07]

2022-12-07T16:19:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640744383 # 682
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 261 474 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 262 476 / 267 485
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-23] / [2022-12-07]

2022-12-07T01:09:37Z: