@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-08T16:19:27Z",
-  "count_outdated" : 476,
-  "uniques_outdated" : 262,
-  "count" : 486,
+  "timestamp" : "2022-12-09T01:09:13Z",
+  "count_outdated" : 479,
+  "uniques_outdated" : 263,
+  "count" : 489,
   "uniques" : 269,
   "clones" : [
-    {
-      "timestamp": "2022-11-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-25T00:00:00Z",
       "count": 2,
@@ -42,8 +35,8 @@
     },
     {
       "timestamp": "2022-12-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
