@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-11-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-25T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -29,7 +24,7 @@
     },
     {
       "timestamp": "2022-12-08T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
