@@ -1,3 +1,11 @@
+2022-12-09T01:09:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3653516368 # 686
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 262 476 / 269 486
+* notice: next accum: outdated-unq outdated-all / unq all: 263 479 / 269 489
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-11-24] / [2022-12-08]
+
 2022-12-08T16:19:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3650093256 # 685
 * notice: last 14d: unq all: 3 10
